--- a/shippable.yml
+++ b/shippable.yml
@@ -1,12 +1,7 @@
 language: python
 
 python:
-  #- 2.3 #.7 
-  #- 2.6 #.9 
-  - 2.7 #.5 
-  #- 3.1 #.5 
-  #- 3.2 #.5 
-  #- 3.3 #.7 
+  - 2.7 #.5  
   - 3.4 #.8 
   - 3.5 #.5 
   - 3.6 #.5
@@ -22,13 +17,5 @@ build:
     
   ci:
     - python --version 
-   # - pip --version #8.1.2
-    #- virtualenv --version #15.1.0
-    - docker pull shippabledocker/sample_node_pvt:ecr
-    
-integrations:
-    
-  hub:
- #Docker integration
-    - integrationName: ship-docker
-      type: dockerRegistryLogin
+    - pip --version #8.1.2
+    - virtualenv --version #15.1.0
